--- a/whole.css
+++ b/whole.css
@@ -143,20 +143,23 @@ width: 200px;
 }
 
 .cool{
-    display: flex;
-    grid-column: 30px;
-    flex-wrap: wrap;
-    gap: 30px;
-    width: 400px;
-    height: 30px;
+    width: 200px;
     border-radius: 5px;
    transition: transform 0.2s ease;
-   justify-content: center;
     position: fixed;
     bottom: 20px;
-    right: 5px;
+    right: 10px;
 }
 
-.cool:hover{
+.cool a{
+   background-color: #214376;
+    color: white;
+    padding: 5px 15px;
+    text-decoration: none;
+    border-radius: 8px;
+    transition: background-color 0.2s ease; 
+}
+
+.cool a:hover{
     transform: scale(1.17)
 }
