--- a/whole.css
+++ b/whole.css
@@ -147,7 +147,7 @@ width: 200px;
      width: 200px;
     border-radius: 5px;
    transition: transform 0.2s ease;
-    position: fixed;
+    /*position: fixed;*/
     bottom: 20px;
     right: 10px;
    background-color: #214376;
