--- a/whole.css
+++ b/whole.css
@@ -204,6 +204,7 @@ img[alt="visitor count"] {
   text-decoration: none;
   color: #0047ab;
   font-weight: bold;
+backgound-color: rgb(17, 153, 165);
 }
 
 .card p {
