--- a/whole.css
+++ b/whole.css
@@ -191,8 +191,10 @@ img[alt="visitor count"] {
     width: 400px;
 }
 .card-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
+ /* display: grid;
+grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));*/
   gap: 20px;
   padding: 30px;
      width: 400px;
