--- a/whole.css
+++ b/whole.css
@@ -163,6 +163,7 @@ body {
   font-family: 'Segoe UI', sans-serif;
   background-color: #f9f9f9;
   padding: 20px;
+  padding: 0 15px;
 }
 h1 {
   color: #004488;
@@ -187,9 +188,8 @@ img[alt="visitor count"] {
   grid-template-columns: repeat(3, 1fr);
   gap: 25px;
   padding: 30px;
-  max-width: 1000px;
+  max-width: 1500px;
   margin: 0 auto;
-left: 20px;
 }
 
 .card {
@@ -199,6 +199,8 @@ left: 20px;
   padding: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
   transition: transform 0.2s ease, box-shadow 0.3s ease;
+   max-width: 1000px;
+  margin: 0 auto;
 }
 
 .card:hover {
