--- a/whole.css
+++ b/whole.css
@@ -60,18 +60,44 @@ button{
 .topbar{
     display: flex;
     flex-direction: row;
-    background-color: white;
+    gap:25px;
+    background-color: rgb(141, 169, 204);
     color:black;
     padding:15px;
     justify-content: center;
   align-items: center;
 }
+*{
+  margin:0;
+  padding:0;
+  /* box-sizing: border-box; */
+  margin-left:-5px;
+  margin-right:-5px;
+}
+.labdd{
+  background-color:  rgb(141, 169, 204);
+  color: solid black
+}
+.labdd:hover{
+  transform:scale(1.3);
+}
 .sublist{
   list-style: none;
   display: flex;
-    flex-direction: row;
-    gap:15px;
-    
+  flex-direction: row;
+  gap:55px;
+  color: rgb(56, 54, 54);
+  margin-top:20px;
+}
+.sub a{
+  text-decoration: none;
+  color: rgb(7, 7, 7);
+  
+}
+.sub:hover{
+  border:0;
+  border-bottom: 2px solid rgb(11, 10, 10);
+  transform: scale(1.04);
 }
 h2{
     display: block;
@@ -195,14 +221,14 @@ body {
   color: #004488;
   text-align: center;
 } */
-a {
+/* a {
   color: #d8dbde;
   text-decoration: none;
   font-weight: bold;
 }
 a:hover {
   color: rgb(41, 181, 181);
-}
+} */
 img[alt="visitor count"] {
   margin-top: 10px;
   filter: drop-shadow(0 0 5px #999);
